--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
     <title>Accessibility Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
+      <img id="logo" src="./img/logo.png" />
       <h1>HTML/CSS Quiz</h1>
       <nav>
         <ul>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <form method="post" action="https://freecodecamp.org/practice-project/accessibility-quiz">
+      <form method="post" action="#goto google">
         <section role="region" aria-labelledby="student-info">
           <h2 id="student-info">Student Info</h2>
           <div class="info">
@@ -111,10 +111,10 @@
     </main>
     <footer>
       <address>
-        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
-        San Francisco<br />
-        California<br />
-        USA
+        <a href="http://google.com">GO TO GOOGLE</a><br />
+        go to hell<br />
+        go to w...<br />
+        India
       </address>
     </footer>
   </body>
