--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
+    <meta http-equiv="refresh" content="5">
     <title>Accessibility Quiz</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
