--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
+      <img id="logo" src="https://cdn.pixabay.com/photo/2016/12/27/13/10/logo-1933884__340.png">
       <h1>HTML/CSS Quiz</h1>
       <nav>
         <ul>
@@ -111,7 +111,7 @@
     </main>
     <footer>
       <address>
-        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+        <a href="https://freecodecamp.org">Accsstoall.com</a><br />
         San Francisco<br />
         California<br />
         USA
